--- a/main.html
+++ b/main.html
@@ -82,7 +82,7 @@
       <br />
       <div>
         <label for="tos">I agree to the TOS</label>
-        <input type="checkbox" id="tos" name="tos" />
+        <input type="checkbox" id="tos" name="tos" required/>
       </div>
       <br />
       <div>
