--- a/main.html
+++ b/main.html
@@ -37,9 +37,9 @@
       <div>
         <label>Gender: </label>
         <label for="gender_m">Male</label
-        ><input type="radio" id="gender_m" name="male" />
+        ><input type="radio" id="gender_m" name="gender" />
         <label for="gender_f">Female</label
-        ><input type="radio" id="gender_m" name="female" />
+        ><input type="radio" id="gender_m" name="gender" />
       </div>
       <br />
       <div>
@@ -77,6 +77,7 @@
           id="password"
           name="password"
           placeholder="Password"
+			required
         />
       </div>
       <br />
