--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@
       </div>
       <br />
       <div>
-        <input type="submit" value="Submit" />
+        <button type="submit" value="Submit" />
       </div>
     </form>
     <script type="text/javascript" src="./script.js">
